[project]
name = "audio_janq0"
version = "0.2"
authors = [
  { name="Jan Konzal", email="jan.konzal@email.cz" },
]
description = "A python module for audio synthesis and effects"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/janq0/audio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
